# eva

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES  agent_speech_fidelity_test_set.jsonl  compose.yaml  conciseness_labels.json  eva_conciseness_test_set.jsonl  eva_conversation_progression_test_set.jsonl  eva_faithfulness_test_set.jsonl  faithfulness_labels.json  main.py  pyproject.toml  run.sh
.github/workflows/: telnyx-pion-probe.yml  tests.yaml
analysis/: README.md
analysis/eva-bench-stats/: README.md  app.py  correlate_transcription_task.py  data_CIs.py  data_frontier.py  data_perturbations.py  data_variance.py  faithfulness_decoupling.py  generate_report.py  load_data.py  paper_config.py  paper_frontier.py  paper_plots.py  paper_tables.py  plots_CIs.py  plots_frontier.py  plots_perturbations.py  plots_utils.py  plots_variance.py  run_data.py  run_paper.py  run_stats.py  stats_CIs.py  stats_frontier.py  stats_perturbations.py  stats_utils.py  stats_variance.py  stats_variance_lmm.py
analysis/perturbations/: data_perturbations.py  regenerate_perturbation_blocks.py  run_perturbations.py  stats_perturbations.py
apps/: README.md  analysis.py  audio_plots.py  config_editor.py  config_io.py  config_schema.py  dataset_explorer.py  itsm_review.py  metrics_labeler.py
apps/judge_variance_analysis/: README.md  analysis.py  app.py  load_data.py  run_iterations.py
apps/run_compare/: app.py
configs/: hr_assignments.yaml  user_behaviors.yaml
configs/agents/: airline_agent.yaml  initial_messages.yaml  itsm_agent.yaml  language_addenda.yaml  medical_hr_agent.yaml
configs/prompts/: judge.yaml  simulation.yaml
data/: airline_dataset.json  airline_dataset.jsonl  airline_dataset.yaml  itsm_dataset.json  itsm_dataset.jsonl  itsm_dataset.yaml  itsm_flows.md  medical_hr_dataset.json  medical_hr_dataset.jsonl  medical_hr_dataset.yaml  sample_itsm_scenario_database.json
data/airline_scenarios/: 1.1.2.json  1.1.3.json  1.1.4.json  1.1.5.json  1.2.1.json  1.2.2.json  1.2.3.json  1.3.1.json  1.3.2.json  2.1.1.json  2.1.2.json  2.1.6.json  2.2.2.json  2.2.4.json  2.2.5.json  2.3.2.json  2.3.4.json  2.4.1.json  2.4.2.json  3.1.3.json  3.1.5.json  3.3.4.json  4.1.1.json  4.1.2.json  4.1.3.json  4.1.5.json  4.2.1.json  4.2.4.json  4.2.5.json  5.1.1.json  5.1.2.json  5.1.3.json  5.1.5.json  5.2.1.json  5.2.2.json  5.2.5.json  5.2.6.json  6.1.1.json  6.1.4.json  6.3.1.json  (+10 more)
data/itsm_aliases/: a_garage.json  alpha_garage.json  central_garage.json  downtown.json  downtown_engineering_center.json  downtown_garage_a.json  downtown_office.json  east_campus.json  east_campus_garage.json  east_garage.json  executive_garage.json  garage_a.json  garage_b.json  general_garage.json  general_surface_lot.json  harbor_engineering_center.json  headquarters.json  headquarters_east.json  headquarters_garage.json  headquarters_garage_a.json  jetbrains_intellij_idea.json  main_garage.json  main_garage_a.json  (+6 more)
docs/: README.md  airline_database_tool_schema.md  architecture.md  assistant_server_contract.md  changelog_agent_timeout_on_user_turn.md  data.md  experiment_setup.md  index.html  limitations.md  llm_configuration.md  metric_context.md  telephony_bridge.md  telnyx_media_streaming.md
scripts/: add_culture_data.py  aggregate_eva_results.py  analyze_chops.py  check_version_bump.py  docker_entrypoint.py  extract_audio.py  jsonl_to_yaml.py  migrate_to_culture_schema.py  refactor_itsm_aliases.py  revalidate_and_promote.py  review_hr_data.py  review_itsm_data.py  run_benchmark.py  run_text_only.py  yaml_to_jsonl.py
tests/: __init__.py
website/: index.html  package-lock.json  package.json  vite.config.ts
(+532 files in other folders)
